# conan-package-tools

./: README.md  pyproject.toml  requirements.txt  requirements_test.txt  requirements_test2.txt  setup.py  tox.ini
cpt/: __init__.py  _compat.py  auth.py  builds_generator.py  config.py  packager.py  profiles.py  remotes.py  requirements.txt  requirements_test.txt  run_in_docker.py  runner.py  uploader.py
cpt/test/: __init__.py
cpt/test/assets/: genconanfile.py
cpt/test/integration/: base.py  basic_test.py  docker_test.py  profile_test.py  remotes_test.py  require_overrides_test.py  update_deps_test.py  update_python_reqs_test.py  update_some_deps_test.py  upload_test.py
cpt/test/test_client/: config_install_test.py  global_conf_test.py  invalid_config_checks_test.py  tools.py  upload_checks_test.py  visual_toolsets_test.py
cpt/test/unit/: auth_test.py  ci_manager_test.py  config_test.py  generators_test.py  global_conf_test.py  packager_test.py  remotes_test.py  utils.py
tests/integration/: base.py  basic_test.py  docker_test.py  profile_test.py  remotes_test.py  require_overrides_test.py  update_deps_test.py  update_python_reqs_test.py  update_some_deps_test.py  upload_test.py
tests/test_client/: config_install_test.py  global_conf_test.py  invalid_config_checks_test.py  tools.py  upload_checks_test.py  visual_toolsets_test.py
tests/unit/: auth_test.py  ci_manager_test.py  config_test.py  generators_test.py  global_conf_test.py  packager_test.py  remotes_test.py  utils.py
tests/utils/: scm.py  server_launcher.py  test_files.py  tools.py  tools_v1.py
(+5 files in other folders)
